# dfx-math-executor-node

./: .dockerignore  DOCKERHUB_README.md  Dockerfile  README.md  compose.yml  node.json  pyproject.toml  start-local.sh  test_api.sh
.github/workflows/: ci.yml  docker-ci.yml  scan-image.yml
dfx/: __init__.py  component.py  data.py  inputs.py  nats.py  outputs.py
dfx/math/: __init__.py
dfx/math/component/: __init__.py  multiply.py
docs/: installation.md
myenv/: pyvenv.cfg
src/math_executor/: __init__.py  api.py  main.py
tests/: conftest.py  test_nats.py  test_node.py
