[project]
name = "droq-math-executor-node"
version = "0.1.0"
description = "Droq Math Executor Node - Simple math operations executor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "nats-py>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
droq-math-executor-node = "math_executor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/math_executor", "dfx"]

