[project]
name = "droq-math-executor-node"
version = "1.0.0"
description = "Droq Math Executor Node provides a unified interface for mathematical operations in DroqFlow workflows"
readme = "README.md"
authors = [
    { name = "DroqAI", email = "support@droq.ai" }
]
maintainers = [
    { name = "DroqAI", email = "support@droq.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=3.4.0",
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
    "nats-py>=2.3.0",
    "PyNaCl>=1.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]
keywords = ["droqflow", "math", "executor", "node", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/droq-ai/dfx-math-executor-node"
Repository = "https://github.com/droq-ai/dfx-math-executor-node"
Documentation = "https://github.com/droq-ai/dfx-math-executor-node#readme"
"Bug Tracker" = "https://github.com/droq-ai/dfx-math-executor-node/issues"

[project.scripts]
droq-math-executor-node = "math_executor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/math_executor", "dfx"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.3",
    "types-requests>=2.32.0.20241016",
]

